--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "dependencies": {
     "discord.js": "^14.21.0",
     "dotenv": "^17.2.0",
-    "math-expression-evaluator": "^2.0.7"
+    "expr-eval": "^2.0.2"
   }
 }
